Changed the suppress warning annotation to the whole function in StudyYamlV1Migrator